[gd_scene load_steps=14 format=3 uid="uid://djd2td8kh8ebf"]

[ext_resource type="Script" path="res://enemys/slim/slim.gd" id="1_wj2yn"]
[ext_resource type="Texture2D" uid="uid://bbvn33rur40ph" path="res://arts/史莱姆_绿_王冠.png" id="2_wiayn"]
[ext_resource type="Texture2D" uid="uid://b3jbsekp6wog2" path="res://arts/health_bar_under.png" id="3_h274s"]
[ext_resource type="Texture2D" uid="uid://djuxjxvba2r1k" path="res://arts/health_bar - progress.png" id="4_1tj8b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wrjw"]
size = Vector2(20, 11.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_fxxxp"]
radius = 9.375

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3q0dx"]
size = Vector2(42, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv04g"]
atlas = ExtResource("2_wiayn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycrlh"]
atlas = ExtResource("2_wiayn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe8w7"]
atlas = ExtResource("2_wiayn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpi0k"]
atlas = ExtResource("2_wiayn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxdj4"]
atlas = ExtResource("2_wiayn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gurg6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv04g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycrlh")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe8w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpi0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxdj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpi0k")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="slim" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_wj2yn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="atk_timer" type="Timer" parent="."]
autostart = true

[node name="hurt_area" type="Area2D" parent="."]

[node name="enemy_c" type="CollisionShape2D" parent="hurt_area"]
position = Vector2(3.38813e-21, 0)
scale = Vector2(1.6, 1.6)
shape = SubResource("RectangleShape2D_2wrjw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.38813e-21, -2.38419e-07)
scale = Vector2(1.6, 1.6)
shape = SubResource("CircleShape2D_fxxxp")

[node name="atk_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atk_area"]
shape = SubResource("RectangleShape2D_3q0dx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_gurg6")
animation = &"walk"

[node name="health_bar" type="TextureProgressBar" parent="."]
offset_left = -15.0
offset_top = -39.0
offset_right = 19.0
offset_bottom = -2.0
size_flags_vertical = 0
max_value = 30.0
value = 30.0
texture_under = ExtResource("3_h274s")
texture_progress = ExtResource("4_1tj8b")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="atk_timer" to="." method="_on_atk_timer_timeout"]
[connection signal="area_entered" from="atk_area" to="." method="_on_atk_area_area_entered"]
[connection signal="area_exited" from="atk_area" to="." method="_on_atk_area_area_exited"]
